# score-tracker

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
i18n/: it.po
i18n/en-US/: score_tracker.ftl
i18n/pl/: score_tracker.ftl
src/: app.rs  localization.rs  main.rs  player_name_cell.rs  player_name_row.rs  remove_turn_button.rs  score_header.rs  score_header_cell.rs  score_page.rs  score_row.rs  score_row_cell.rs  tallied_score_cell.rs  tallied_score_row.rs  timer.rs  timer_editor.rs  timer_page.rs  turn_number.rs  turn_score_cell.rs  turn_score_row.rs  utils.rs
src/resources/: com.github.weclaw1.ScoreTracker.desktop  com.github.weclaw1.ScoreTracker.metainfo.xml  com.github.weclaw1.ScoreTracker.yaml  io.github.weclaw1.ScoreTracker.desktop  io.github.weclaw1.ScoreTracker.metainfo.xml  io.github.weclaw1.ScoreTracker.yaml
