[package]
name = "score-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
once_cell = "1.18.0"
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"]}
rust-embed = "8.0.0"
i18n-embed-fl = "0.7.0"

[dependencies.relm4]
version = "0.7.0-beta.1"
features = ["macros", "libadwaita"]

[dependencies.relm4-icons]
version = "0.7.0-alpha.2"
features = ["table", "hourglass", "plus", "person-add-regular", "person-subtract-regular", "cross-filled", "play", "pause", "refresh", "delete-filled", "cross"]