[package]
name = "score-tracker"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "Score Tracker is an application for tracking player scores in card and board games."
homepage = "https://github.com/weclaw1/score-tracker"
repository = "https://github.com/weclaw1/score-tracker"
readme = "README.md"
authors = ["Robert Węcławski <r.weclawski@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
once_cell = "1.18.0"
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"]}
rust-embed = "8.0.0"
i18n-embed-fl = "0.7.0"

[dependencies.relm4]
version = "0.7.0-beta.2"
features = ["macros", "libadwaita"]

[dependencies.relm4-icons]
version = "0.7.0-alpha.2"
features = ["table", "hourglass", "plus", "person-add-regular", "person-subtract-regular", "cross-filled", "play", "pause", "refresh", "delete-filled", "cross"]